优化了服务器连接逻辑，支持自动识别语言提交

--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "browser_specific_settings": {
     "gecko": {
-      "id": "oj-remote-submit@local",
+      "id": "Faster-OJ@local",
       "strict_min_version": "109.0"
     }
   },
