--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Faster-OJ",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "description": "通过 WebSocket 接收包含 URL 和代码的任务，实现各大 OJ 平台的自动化代码提交。",
   "author": "XiaoCRQ",
   "homepage_url": "https://github.com/XiaoCRQ/Faster-OJ",
@@ -45,6 +45,6 @@
     }
   ],
   "content_security_policy": {
-    "extension_pages": "default-src 'self'; connect-src ws://127.0.0.1:10044 http://127.0.0.1:10044"
+    "extension_pages": "default-src 'self'; connect-src ws://127.0.0.1:* http://127.0.0.1:* ws://localhost:* http://localhost:*"
   }
 }
